--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="#" class="nav-item">Inicio</a>
             <a href="#beneficios" class="nav-item">Beneficios</a>
             <a href="#plan" class="nav-item">Plan Mensual</a>
-            <a href="#" class="nav-item"><button class="btn btn--primary">Registrarse</button></a>
-            <a href="#" class="nav-item"><button class="btn btn--secondary">Iniciar sesion</button></a>
+            <a href="/formularios/register.html" class="nav-item"><button class="btn btn--primary">Registrarse</button></a>
+            <a href="formularios/login.html" class="nav-item"><button class="btn btn--secondary">Iniciar sesion</button></a>
         </nav>
         <label for="burguer-menu"><i class="fa-solid fa-bars"></i></label>
 
@@ -28,6 +28,7 @@
                 <li><a href="">Plan Mensual</a></li>
                 <li><a href="">Registrarse</a></li>
                 <li><a href="">Iniciar Sesion</a></li>
+
             </ul>
         </div>
     </header>
