added plan section id

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
     </div>
 
-    <section class="section__sub">
+    <section id="plan" class="section__sub">
         <img src="assets/asus.png" width="100px" alt="">
         <div class="sub__wrapper">
             <div class="sub__card">
